# python_boilerplate

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
docs/: README.md
migrations/: env.py
migrations/versions/: d78161ea1b37_create_users_table.py
src/contexts/entrypoint/: app.py  bootstrap.py  config.py  orm.py  run.py
src/contexts/standard/aggregates/auth/: bootstrap.py
src/contexts/standard/aggregates/auth/adapters/: mailer.py  orm.py  repository.py  template_builder.py
src/contexts/standard/aggregates/auth/domain/: exceptions.py  messages.py  model.py  validations.py
src/contexts/standard/aggregates/auth/entrypoint/middlewares/: isauthenticated.py
src/contexts/standard/aggregates/auth/entrypoint/rest/: routes.py
src/contexts/standard/aggregates/auth/services/: unit_of_work.py
src/contexts/standard/aggregates/auth/services/handlers/: command.py  events.py  mappers.py  query.py
src/contexts/standard/aggregates/auth/services/mail/_templates/: reset_password.html
src/core/: domain.py  exceptions.py  helpers.py  messagebus.py  response.py
src/core/ports/: mailer.py  repository.py  template_builder.py  unit_of_work.py
tests/auth/: conftest.py
tests/auth/unit/: test_handlers.py
tests/fakes/: auth.py
